--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/fincon
+spring.datasource.url= jdbc:postgresql://localhost:5432/fincon_30-04-23
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
