--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/fincon
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://postgres://fincon_user:WDuqMEMSPnuzskMEafE4hbOKXLFuy0nq@dpg-cpmc6seehbks73fncg6g-a.oregon-postgres.render.com/fincon:5432/fincon
+spring.datasource.username=fincon_user
+spring.datasource.password=WDuqMEMSPnuzskMEafE4hbOKXLFuy0nq
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
