--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/fincon_30-04-23
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-cpmc6seehbks73fncg6g-a.oregon-postgres.render.com/fincon
+spring.datasource.username=fincon_user
+spring.datasource.password=WDuqMEMSPnuzskMEafE4hbOKXLFuy0nq
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 server.port=8082
