--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-cpmc6seehbks73fncg6g-a.oregon-postgres.render.com/fincon
-spring.datasource.username=fincon_user
-spring.datasource.password=WDuqMEMSPnuzskMEafE4hbOKXLFuy0nq
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.qzjzlvvnlexyqgdlnlxk
+spring.datasource.password=J8$8hfKsuGfjNUx
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+server.port=8082
