--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,6 @@ spring.datasource.username=postgres.qzjzlvvnlexyqgdlnlxk
 spring.datasource.password=J8$8hfKsuGfjNUx
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.port=8082
-
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.maximum-pool-size=10
-
-spring.cache.type=NONE
-
-spring.jpa.hibernate.new_generator_mappings=true
-spring.jpa.hibernate.connection.provider_disables_autocommit=false
-spring.jpa.hibernate.cache.use_second_level_cache=true
-spring.jpa.hibernate.cache.use_query_cache=false
+spring.jpa.open-in-view=false
