--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8082
 spring.jpa.open-in-view=false
+
+springdoc.packages-to-scan=com.fincon.controller
+springdoc.paths-to-match=/api/**
