config timezone properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.open-in-view=false
 
 springdoc.packages-to-scan=com.fincon.controller
 springdoc.paths-to-match=/api/**
+
+spring.jackson.time-zone=America/Sao_Paulo
