--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.qzjzlvvnlexyqgdlnlxk
-spring.datasource.password=J8$8hfKsuGfjNUx
+spring.datasource.url=${FINCON_DATABASE_URL}
+spring.datasource.username=${FINCON_DATABASE_USERNAME}
+spring.datasource.password=${FINCON_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
