--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ springdoc.packages-to-scan=com.fincon.controller
 springdoc.paths-to-match=/api/**
 
 spring.jackson.time-zone=America/Sao_Paulo
+
+
+#Tentando resolver problema de ERROR: prepared statement "S_1" already exists
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
